# OpenManus

./: ARCHITECTURE.md  README.md  README_WITH_FEATURES.md  WRITER_TOOL_IMPLEMENTATION.md  debug_config.py  debug_hasattr.py  frontend_app.py  main.py  pyproject.toml  requirements.txt  run_flow.py  run_frontend.sh  run_mcp_server.py  run_web_research.py  test_skills.py  test_skills_simple.py  test_skills_standalone.py  test_webfetch.py
app/: config.py  exceptions.py  llm.py  schema.py  server.py
app/agent/: __init__.py  base.py  intent_analyzer.py  manus.py  research_master.py  sandbox_agent.py  search.py  toolcall.py  web_research.py
app/daytona/: sandbox.py
app/flow/: planning.py
app/mcp/: server.py
app/prompt/: intent_analyzer.py  manus.py  research_master.py  search.py  web_research.py
app/skills/: __init__.py  hooks.py  skill.py  skill_manager.py  skill_matcher.py  skill_parser.py  utils.py
app/tool/: __init__.py  api_human_loop.py  browser_use_tool.py  enhanced_web_research.py  human_in_the_loop.py  loader.py  tool_collection.py  web_search.py  webfetch.py  writer_tool.py
config/: config.example.toml  mcp.json
docs/: FRONTEND.md  SKILLS_GUIDE.md
docs/agents/: ResearchMasterPro.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
skills/: README.md
skills/docx/: SKILL.md
skills/human-in-the-loop/: SKILL.md
skills/pdf/: SKILL.md
skills/pptx/: SKILL.md
skills/xlsx/: SKILL.md
static/: i18n.js
templates/: index.html
tests/: test_skills.py  test_writer_tool.py
(+16 files in other folders)
